--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,19 @@
 /* You can add global styles to this file, and also import other style files */
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+.page{
+    margin: 0rem;
+    padding: 0rem;
+    height: 100vh;
+    width: 100%;
+}
+.bg-glass{
+    background-color: #000;
+    opacity: 0.7;
+}
+.bg-1{
+    background: url(./assets/images/stock-market/bg-1.jpg);    
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+}
