--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,19 +1,36 @@
 /* You can add global styles to this file, and also import other style files */
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
-.page{
-    margin: 0rem;
-    padding: 0rem;
-    height: 100vh;
-    width: 100%;
+
+.mt-1{
+    margin-top: 1rem;
 }
-.bg-glass{
-    background-color: #000;
-    opacity: 0.7;
+mat-divider{
+    border-color: #fff !important;
+    margin-top: 0.5rem !important;
+    margin-bottom: 0.5rem !important;
 }
-.bg-1{
-    background: url(./assets/images/stock-market/bg-1.jpg);    
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center;
+.card-type-1,.card-type-2,.card-type-3,.card-type-4,.card-type-5,.card-type-6{
+    color: white !important;
+    mat-card-title{
+        color: white !important;
+    }
+}
+.card-type-1{
+    background: #2131f5 !important;
+}
+.card-type-2{
+    background: #9f17b7 !important;
+}
+.card-type-3{
+    background: #ef0957 !important;
+}
+.card-type-4{
+    background: #800000 !important;
+}
+.card-type-5{
+    background: #065a5a !important;
+}
+.card-type-6{
+    background: #1eaef3 !important;
 }
