--- a/src/app/modules/beneficiaries/components/beneficiary-form/beneficiary-form.component.html
+++ b/src/app/modules/beneficiaries/components/beneficiary-form/beneficiary-form.component.html
@@ -7,9 +7,9 @@
         ></app-beneficiary-edit>
     </div>
     <ng-template #add_form>
-        <app-beneficiary-add
+        <!-- <app-beneficiary-add
             [countryList]="countryList"
             [beneficiaryRelations]="beneficiaryRelations"
-        ></app-beneficiary-add>
+        ></app-beneficiary-add> -->
     </ng-template>
 </div>
