--- a/src/app/modules/home/components/side-menu/side-menu.component.html
+++ b/src/app/modules/home/components/side-menu/side-menu.component.html
@@ -1,6 +1,6 @@
 <div class="side-menu" *ngIf="currentUser">
     <div class="header-logo" fxLayoutAlign="center center">
-        <img alt="QIB Logo" src="assets/images/cib_logo_postlogin.svg" />
+        <img alt="QIB Logo" src="assets/images/cib_logo_postlogin.png" />
     </div>
     <div *appHasAccessToUser="[USER_TYPE.CORPORATE_USER]" class="rim-card-active">
         <div class="rim-number">
