--- a/src/app/modules/authentication/authentication.component.html
+++ b/src/app/modules/authentication/authentication.component.html
@@ -2,10 +2,10 @@
 <div class="authentication" fxLayout="column" fxLayoutAlign="center center">
     <div class="auth-container">
         <div class="auth-outlet" fxLayout="row" fxLayout.lt-md="column">
-            <div class="router-outlet" fxFlex="50">
+            <div class="router-outlet" fxFlex="100">
                 <router-outlet></router-outlet>
             </div>
-            <app-know-more fxFlex="50"></app-know-more>
+            <!-- <app-know-more fxFlex="50"></app-know-more> -->
         </div>
         <app-verticle-slider></app-verticle-slider>
     </div>
