--- a/src/app/modules/authentication/components/login/login.component.html
+++ b/src/app/modules/authentication/components/login/login.component.html
@@ -1,7 +1,7 @@
 <div class="login-wrapper">
     <div fxLayout="column" fxFlex fxLayoutAlign="center center">
         <div class="login-title">
-            <mat-label>Corporate Login</mat-label>
+            <mat-label>Login</mat-label>
         </div>
         <div class="login-form">
             <form
