--- a/src/app/modules/bank-admin-group-management/components/mappings/mappings.component.html
+++ b/src/app/modules/bank-admin-group-management/components/mappings/mappings.component.html
@@ -29,7 +29,7 @@
                         (selectionChange)="getSelectedCorporate($event.value)"
                     >
                         <mat-option *ngFor="let corporate of corporatesList" [value]="corporate">
-                            {{ corporate.rimnumber }}
+                            {{ corporate.uniqueUserId }}
                         </mat-option>
                     </mat-select>
                 </mat-form-field>
