--- a/src/app/modules/beneficiaries/components/beneficiary-details/beneficiary-details.component.html
+++ b/src/app/modules/beneficiaries/components/beneficiary-details/beneficiary-details.component.html
@@ -84,7 +84,7 @@
         (click)="onTransferClick()"
         type="submit"
         class="mat-raised-button mat-primary"
-        *appHasAccessToRole="['ROLE_USER_MAKER', 'ROLE_USER_MAKER_CHECKER']"
+        *appHasAccessToRole="['USER', 'ROLE_USER_MAKER_CHECKER']"
     >
         Make Transfer
     </button>
