--- a/src/app/modules/corporate-management/components/corporate-details/corporate-details.component.html
+++ b/src/app/modules/corporate-management/components/corporate-details/corporate-details.component.html
@@ -34,9 +34,9 @@
                 ></app-label-value>
 
                 <app-label-value
-                    *ngIf="corporateDetails.rimnumber"
+                    *ngIf="corporateDetails.uniqueUserId"
                     [label]="'RIM Number'"
-                    [value]="corporateDetails.rimnumber"
+                    [value]="corporateDetails.uniqueUserId"
                 ></app-label-value>
 
                 <app-label-value
