--- a/src/app/modules/dashboard/components/completed-overview/completed-overview.component.html
+++ b/src/app/modules/dashboard/components/completed-overview/completed-overview.component.html
@@ -1,6 +1,6 @@
 <ng-container *ngIf="!isStpUser">
     <app-my-completed-requests
-        *appHasAccessToRole="[ROLE_NAME.ROLE_USER_MAKER, ROLE_NAME.ROLE_USER_MAKER_CHECKER]"
+        *appHasAccessToRole="[ROLE_NAME.USER, ROLE_NAME.ROLE_USER_MAKER_CHECKER]"
     ></app-my-completed-requests>
 </ng-container>
 <div class="divider"></div>
