--- a/src/app/modules/dashboard/components/my-completed-requests/my-completed-requests.component.html
+++ b/src/app/modules/dashboard/components/my-completed-requests/my-completed-requests.component.html
@@ -1,6 +1,6 @@
 <app-master-container>
     <ng-container header>
-        <span class="count" *ngIf="config.totalRecords">{{ config.totalRecords }}</span> Own Requests
+        <span class="count" *ngIf="config.totalRecords">{{ config.totalRecords }}</span>Payments Completed
     </ng-container>
     <ng-container icons>
         <form action="" class="search-group" [formGroup]="searchForm">
