--- a/src/app/modules/authentication/components/pre-login-header/pre-login-header.component.html
+++ b/src/app/modules/authentication/components/pre-login-header/pre-login-header.component.html
@@ -1,5 +1,5 @@
 <div fxLayout="row" class="header-container">
     <div class="header-logo" fxLayoutAlign="center center">
-        <img alt="QIB Logo" src="assets/images/cib_logo_prelogin.png" />
+        <img alt="QIB Logo" src="assets/images/sgs_logo_prelogin.webp" />
     </div>
 </div>
