--- a/src/app/modules/authentication/components/verticle-slider/verticle-slider.component.html
+++ b/src/app/modules/authentication/components/verticle-slider/verticle-slider.component.html
@@ -1,6 +1,6 @@
 <div class="carousel-container" fxLayout="row" fxFlex="100" fxHide.lt-md="true" fxLayoutAlign="center center">
     <div class="static-content" fxFlex="10" fxLayoutAlign="center" fxLayout="column">
-        <div>Corporate Services</div>
+        <div> Save Gold Scheme</div>
     </div>
     <div fxFlex="90" fxLayout="column" fxLayoutAlign="center">
         <ngx-slick-carousel class="carousel" #slickModal="slick-carousel" [config]="slideConfig">
