--- a/src/app/modules/dashboard/components/overview/overview.component.html
+++ b/src/app/modules/dashboard/components/overview/overview.component.html
@@ -1,30 +1,14 @@
-<ng-container *ngIf="!isStpUser">
-    <app-queue-status *appHasAccessToRole="[ROLE_NAME.ROLE_USER_MAKER]"></app-queue-status>
+<ng-container>
+    <app-queue-status  *appHasAccessToRole="[ROLE_NAME.ADMIN,ROLE_NAME.DEALER]"></app-queue-status>
 </ng-container>
 
-<app-portfolio *ngIf="isStpUser; else nonStpPortfolio"></app-portfolio>
-<ng-template #nonStpPortfolio>
-    <app-portfolio
-        *appHasAccessToRole="[
-            ROLE_NAME.ROLE_USER_MAKER_CHECKER,
-            ROLE_NAME.ROLE_USER_VIEWER,
-            ROLE_NAME.ROLE_USER_VERIFIER,
-            ROLE_NAME.ROLE_USER_CHECKER
-        ]"
-    >
-    </app-portfolio>
-</ng-template>
-
-<ng-container *ngIf="!isStpUser">
+<ng-container>
     <app-master-container
-        *appHasAccessToRole="[ROLE_NAME.ROLE_USER_MAKER, ROLE_NAME.ROLE_USER_MAKER_CHECKER]"
+        *appHasAccessToRole="[ROLE_NAME.USER]"
         #approved
         [opened]="true"
         [collapsable]="true"
     >
-        <ng-container header>
-            <span class="count" *ngIf="myRequests.config">{{ myRequests.config.totalRecords }}</span> All Requests
-        </ng-container>
         <ng-container icons>
             <button mat-button color="accent" (click)="viewAllRequests(APP_ROUTES.DASHBOARD_DETAILED)">View All</button>
         </ng-container>
@@ -34,7 +18,7 @@
     </app-master-container>
 </ng-container>
 <app-master-container
-    *appHasAccessToRole="[ROLE_NAME.ROLE_USER_MAKER_CHECKER, ROLE_NAME.ROLE_USER_VERIFIER, ROLE_NAME.ROLE_USER_CHECKER]"
+    *appHasAccessToRole="[ROLE_NAME.ADMIN, ROLE_NAME.DEALER]"
     #pending
     [collapsable]="true"
 >
