--- a/src/app/modules/home/components/side-menu/side-menu.component.scss
+++ b/src/app/modules/home/components/side-menu/side-menu.component.scss
@@ -7,7 +7,8 @@
         .header-logo {
             padding: 1rem;
             img {
-                height: 3.5rem;
+                height: 4.5rem;
+                width: 100%;
             }
         }
         .rim-card-active {
