--- a/src/app/cib-components/footer/footer.component.html
+++ b/src/app/cib-components/footer/footer.component.html
@@ -1,6 +1,6 @@
 <div class="footer">
     <div class="footer-wrapper">
-        <span class="copy-right">Copyright © 2022 QIB</span>
+        <span class="copy-right">Copyright © 2023 SGS</span>
         <span class="divider-vertical"></span>
         <span>Security Tips</span>
         <span class="divider-vertical"></span>
