--- a/src/app/modules/home/components/save-gold-scheme/sgs-update-user/sgs-update-user.component.html
+++ b/src/app/modules/home/components/save-gold-scheme/sgs-update-user/sgs-update-user.component.html
@@ -1,5 +1,5 @@
 <form  [formGroup]="updateUserForm" >
-    <div  fxLayout="column" fxLayoutGap="0.3rem">
+    <div  fxLayout="column" fxLayoutGap="0.3rem" class="mb-4">
         <!-- <div class="header-info">
             <i class="las la-info-circle"></i> All information below must be in ENGLISH only. Special characters are not
             allowed
