--- a/src/app/modules/home/components/save-gold-scheme/delete-request-confirm/delete-request-confirm.component.html
+++ b/src/app/modules/home/components/save-gold-scheme/delete-request-confirm/delete-request-confirm.component.html
@@ -7,8 +7,7 @@
     </ng-container>
     <ng-container body>
         <div class="body">
-            <div>Do you want to delete the request ?</div>
-            <div>Request ID: {{ data.sgsRef }}</div>
+            <div>Do you want to delete {{data}}?</div>
             <div>
                 <button
                     mat-button
