--- a/src/app/modules/home/components/save-gold-scheme/sgs-schemes/sgs-schemes.component.html
+++ b/src/app/modules/home/components/save-gold-scheme/sgs-schemes/sgs-schemes.component.html
@@ -1,17 +1,17 @@
 <app-outlet-container>
     <app-master-container>
-        <ng-container header> SCHEMES</ng-container>
+        <ng-container header *ngIf="type==='addSchemes'"> SCHEMES</ng-container>
         <ng-container body>
             <div fxLayout="column" fxFlex="100">
                 <mat-tab-group class="form-tabs">
                     <mat-tab label="Individual">
                         <ng-template matTabContent>
-                            <app-sgs-scheme-individual></app-sgs-scheme-individual>
+                            <app-sgs-scheme-individual [type]="type"></app-sgs-scheme-individual>
                         </ng-template>
                     </mat-tab>
                     <mat-tab label="Group">
                         <ng-template matTabContent>
-                            <app-sgs-scheme-group></app-sgs-scheme-group>
+                            <app-sgs-scheme-group [type]="type"></app-sgs-scheme-group>
                         </ng-template>
                     </mat-tab>
                 </mat-tab-group>
