--- a/src/app/modules/home/components/save-gold-scheme/sgs-users/sgs-users.component.html
+++ b/src/app/modules/home/components/save-gold-scheme/sgs-users/sgs-users.component.html
@@ -1,27 +1,50 @@
 <app-outlet-container>
-    
     <app-master-container>
         <ng-container header>
-             {{roleType===0?'Clients':'Dealers'}}
+             Users
         </ng-container>
         <ng-container icons>
             <button mat-icon-button >
                 <i class="las la-file-excel"></i>
             </button>
-            <button mat-icon-button >
+            <!-- <button mat-icon-button >
                 <i class="las la-file-pdf"></i>
-            </button>
-            <button mat-icon-button >
+            </button> -->
+            <button *ngIf="selectedUserType>-1" mat-icon-button (click)="addUsers()">
                 <i class="las la-plus"></i>
             </button>
         </ng-container>
         <ng-container body>
-            <app-sgs-table
-                [config]="config"
-                (_lazyLoad)="lazyLoad($event)"
-                (_select)="onSelect($event)"
-                (_clickCell)="onClickCell($event)"
-            ></app-sgs-table>
+            <div fxLayout="column" fxFlex="100">
+                <div fxLayout="row" fxLayoutGap="1rem">
+                    <mat-form-field>
+                        <mat-label>Select User Type</mat-label>
+                        <mat-select [(ngModel)]="selectedUserType">
+                            <mat-option 
+                            (onSelectionChange)="updateUserType($event,userType.id)"
+                            *ngFor="let userType of userTypes" [value]="userType.id">{{
+                                userType.name
+                            }}</mat-option>
+                        </mat-select>
+                    </mat-form-field>
+                    <mat-form-field>
+                        <mat-label>Select Status</mat-label>
+                        <mat-select [(ngModel)]="selectedStatus">
+                            <mat-option 
+                            (onSelectionChange)="updateStatus($event,status)"
+                            *ngFor="let status of statuses" [value]="status">{{
+                                status
+                            }}</mat-option>
+                        </mat-select>
+                    </mat-form-field>
+                </div>
+                <app-sgs-table
+                    [config]="tableConfig"
+                    (_lazyLoad)="lazyLoad($event)"
+                    (_select)="onSelect($event)"
+                    (_clickCell)="onClickCell($event)"
+                ></app-sgs-table>
+            </div>
         </ng-container>
     </app-master-container>
 </app-outlet-container>
